feat: split transactions
